@@ -11,6 +11,9 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 ----------------
 - Rely on beautifulsoup4, Products.CPUtils
 - Moved dashboards and meeting view to imio.dashboard (see imio.dashboard package regarding required changes)
+- Do not index MeetingFiles anymore to avoid too much elements in the catalog.  MeetingFiles title is now indexed in items's
+  SearchableText so it is possible to do a search on an annex title directly in the 'Search' field available on every
+  dashboard searches (my items, all items, ...)
 - Moved MeetingConfig.searchXXX searches to collective.compoundcriterion compatible search adapter
 - Removed Meeting.getAllItems and Meeting.getItemsInOrder, we now only use Meeting.getItems with relevant parameters
 - Indexed the meetingUID and meetingDate on items so we are able to add a sortable 'meeting' column
